Make sure that tasks JSON is included in package.

--- a/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML.csproj
+++ b/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML.csproj
@@ -34,7 +34,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Update="FrendsTaskMetadata.json">
+	<None Include="FrendsTaskMetadata.json" Pack="true" PackagePath="/">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
