--- a/Frends.Excel.ConvertToCSV/Frends.Excel.ConvertToCSV/Frends.Excel.ConvertToCSV.csproj
+++ b/Frends.Excel.ConvertToCSV/Frends.Excel.ConvertToCSV/Frends.Excel.ConvertToCSV.csproj
@@ -2,12 +2,13 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+			<LangVersion>latest</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AssemblyName>Frends.Excel.ConvertToCSV</AssemblyName>
 		<RootNamespace>Frends.Excel.ConvertToCSV</RootNamespace>
 
-		<Version>1.0.2</Version>
+		<Version>1.0.3</Version>
 		<Authors>Frends</Authors>
 		<Copyright>Frends</Copyright>
 		<Company>Frends</Company>
