--- a/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON.csproj
+++ b/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON/Frends.Excel.ConvertToJSON.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+      <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Authors>Frends</Authors>
     <Copyright>Frends</Copyright>
     <Company>Frends</Company>
