--- a/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML.csproj
+++ b/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML/Frends.Excel.ConvertToXML.csproj
@@ -2,10 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+			<LangVersion>latest</LangVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
-		<Version>1.0.2</Version>
+		<Version>1.0.3</Version>
 		<Authors>Frends</Authors>
 		<Copyright>Frends</Copyright>
 		<Company>Frends</Company>
