--- a/Frends.Excel.CreateFromCsv/Frends.Excel.CreateFromCsv.Tests/Frends.Excel.CreateFromCsv.Tests.csproj
+++ b/Frends.Excel.CreateFromCsv/Frends.Excel.CreateFromCsv.Tests/Frends.Excel.CreateFromCsv.Tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <None Include=".env" CopyToOutputDirectory="PreserveNewest" Condition="Exists('.env')"/>
+        <None Include="TestData/**/*" CopyToOutputDirectory="Always"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -21,4 +22,5 @@
         <PackageReference Include="NUnit3TestAdapter" Version="6.*"/>
         <PackageReference Include="dotenv.net" Version="4.*"/>
     </ItemGroup>
+
 </Project>
